--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -46,6 +46,7 @@ library
                 ViewPatterns
                 TupleSections
                 RecordWildCards
+                ScopedTypeVariables
 
     build-depends: base                          >= 4          && < 5
                  , yesod                         >= 1.4.3      && < 1.5
