--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -99,8 +99,7 @@ executable         emp-pl-site
 test-suite test
     type:              exitcode-stdio-1.0
     main-is:           Spec.hs
-    other-modules:     Handler.CommentSpec
-                       Handler.CommonSpec
+    other-modules:     Handler.CommonSpec
                        Handler.HomeSpec
                        TestImport
     hs-source-dirs:    test
