--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -15,9 +15,11 @@ library
     hs-source-dirs: ., app
     exposed-modules: Application
                      Foundation
+                     Forms
                      Import
                      Import.NoFoundation
                      Model
+                     Model.CountryCodes
                      Settings
                      Settings.StaticFiles
                      Handler.Common
@@ -25,7 +27,7 @@ library
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
-        ghc-options:   -Wall -fwarn-tabs -O0
+        ghc-options:   -Wall -fwarn-tabs -O0 -fdefer-typed-holes
     else
         ghc-options:   -Wall -fwarn-tabs -O2
 
@@ -84,6 +86,7 @@ library
                  , time
                  , case-insensitive
                  , wai
+                 , country-codes == 0.1.3
 
 executable         emp-pl-site
     if flag(library-only)
