--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -106,7 +106,7 @@ test-suite test
                        Handler.HomeSpec
                        TestImport
     hs-source-dirs:    test
-    ghc-options:       -Wall
+    ghc-options:       -Wall -fdefer-typed-holes
 
     extensions: TemplateHaskell
                 QuasiQuotes
