--- a/config/test-settings.yml
+++ b/config/test-settings.yml
@@ -7,3 +7,5 @@ database:
   #
   #   database: "_env:PGDATABASE:emp-pl-site_LOWER_test"
   database: empplsite_lower_test
+  googleUser: "_env:GOOGLEUSER"
+  googlePassword: "_env:GOOGLEPASSWORD"
