--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -127,6 +127,7 @@ test-suite test
 
     build-depends: base
                  , emp-pl-site
+                 , yesod-auth
                  , yesod-test >= 1.5.0.1 && < 1.6
                  , yesod-core
                  , yesod
@@ -137,6 +138,10 @@ test-suite test
                  , shakespeare
                  , transformers
                  , hspec >= 2.0.0
+                 , hspec-webdriver
                  , classy-prelude
                  , classy-prelude-yesod
                  , aeson
+                 , warp
+                 , warp-tls
+                 , file-embed
