Test logging in

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -139,6 +139,7 @@ test-suite test
                  , transformers
                  , hspec >= 2.0.0
                  , hspec-webdriver
+                 , webdriver >= 0.8
                  , classy-prelude
                  , classy-prelude-yesod
                  , aeson
