--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -50,35 +50,35 @@ library
                 ScopedTypeVariables
                 DeriveGeneric
 
-    build-depends: base                          >= 4          && < 5
-                 , yesod                         >= 1.4.3      && < 1.5
-                 , yesod-core                    >= 1.4.17     && < 1.5
-                 , yesod-auth                    >= 1.4.0      && < 1.5
-                 , yesod-static                  >= 1.4.0.3    && < 1.6
-                 , yesod-form                    >= 1.4.0      && < 1.5
-                 , classy-prelude                >= 0.10.2
-                 , classy-prelude-conduit        >= 0.10.2
-                 , classy-prelude-yesod          >= 0.10.2
-                 , bytestring                    >= 0.9        && < 0.11
-                 , text                          >= 0.11       && < 2.0
-                 , persistent                    >= 2.0        && < 2.6
-                 , persistent-postgresql         >= 2.1.1      && < 2.6
-                 , persistent-template           >= 2.0        && < 2.6
+    build-depends: base
+                 , yesod
+                 , yesod-core
+                 , yesod-auth
+                 , yesod-static
+                 , yesod-form
+                 , classy-prelude
+                 , classy-prelude-conduit
+                 , classy-prelude-yesod
+                 , bytestring
+                 , text
+                 , persistent
+                 , persistent-postgresql
+                 , persistent-template
                  , template-haskell
-                 , shakespeare                   >= 2.0        && < 2.1
-                 , hjsmin                        >= 0.1        && < 0.3
-                 , monad-control                 >= 0.3        && < 1.1
-                 , wai-extra                     >= 3.0        && < 3.1
-                 , yaml                          >= 0.8        && < 0.9
-                 , http-conduit                  >= 2.1        && < 2.2
-                 , directory                     >= 1.1        && < 1.3
-                 , warp                          >= 3.0        && < 3.3
+                 , shakespeare
+                 , hjsmin
+                 , monad-control
+                 , wai-extra
+                 , yaml
+                 , http-conduit
+                 , directory
+                 , warp
                  , data-default
-                 , aeson                         >= 0.6        && < 0.12
-                 , conduit                       >= 1.0        && < 2.0
-                 , monad-logger                  >= 0.3        && < 0.4
-                 , fast-logger                   >= 2.2        && < 2.5
-                 , wai-logger                    >= 2.2        && < 2.3
+                 , aeson
+                 , conduit
+                 , monad-logger
+                 , fast-logger
+                 , wai-logger
                  , file-embed
                  , safe
                  , unordered-containers
@@ -87,7 +87,7 @@ library
                  , time
                  , case-insensitive
                  , wai
-                 , country-codes == 0.1.3
+                 , country-codes
 
 executable         emp-pl-site
     if flag(library-only)
@@ -128,7 +128,7 @@ test-suite test
     build-depends: base
                  , emp-pl-site
                  , yesod-auth
-                 , yesod-test >= 1.5.0.1 && < 1.6
+                 , yesod-test
                  , yesod-core
                  , yesod
                  , persistent
@@ -137,9 +137,9 @@ test-suite test
                  , monad-logger
                  , shakespeare
                  , transformers
-                 , hspec >= 2.0.0
+                 , hspec
                  , hspec-webdriver
-                 , webdriver >= 0.8
+                 , webdriver
                  , classy-prelude
                  , classy-prelude-yesod
                  , aeson
