Do The Right Thing re lauching warp-tls

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -129,6 +129,7 @@ test-suite test
                 ViewPatterns
 
   build-depends:   aeson
+                 , async
                  , base
                  , classy-prelude
                  , classy-prelude-yesod
