Drop the gotExplanation field - users see the explanation if they haven't rated anything

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -123,6 +123,7 @@ test-suite test
                 NoMonomorphismRestriction
                 OverloadedStrings
                 QuasiQuotes
+                RecordWildCards
                 TemplateHaskell
                 TupleSections
                 TypeFamilies
