Enable -rtsopts in test

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -109,7 +109,7 @@ test-suite test
                        Handler.HomeSpec
                        TestImport
     hs-source-dirs:    test
-    ghc-options:       -Wall -fdefer-typed-holes
+    ghc-options:       -Wall -fdefer-typed-holes -rtsopts
 
     extensions: CPP
                 DeriveDataTypeable
