--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -124,6 +124,7 @@ test-suite test
                 OverloadedStrings
                 QuasiQuotes
                 RecordWildCards
+                ScopedTypeVariables
                 TemplateHaskell
                 TupleSections
                 TypeFamilies
@@ -136,6 +137,7 @@ test-suite test
                  , classy-prelude-yesod
                  , emp-pl-site
                  , esqueleto
+                 , exceptions
                  , file-embed
                  , hspec
                  , hspec-webdriver
