--- a/config/test-settings.yml
+++ b/config/test-settings.yml
@@ -6,7 +6,7 @@ database:
   # something like:
   #
   #   database: "_env:PGDATABASE:emp-pl-site_LOWER_test"
-  database: empplsite_lower_test
+  database: empplsite_test
 
 allowDummyAuth: true
 
