--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 - export PGPASS=$(head -c 20 /dev/urandom | sha1sum|head -c 40)
 - echo POSTGRES_PASSWORD=$PGPASS >> postgres_dev_env
 - echo PGPASS=$PGPASS >> emp-pl-site_dev_env
-- docker-compose up postgres selenium -d
+- docker-compose up -d postgres selenium
 # This is a race. Bringing up postgres and selenium //should// always be slower
 # than downloading GHC and building the whole system though.
 - stack --no-terminal --install-ghc test
