--- a/dev-certs/genkey.conf
+++ b/dev-certs/genkey.conf
@@ -70,3 +70,4 @@ nsComment           = "OpenSSL Generated Certificate"
 
 DNS.1       = localhost
 DNS.2       = nginx
+DNS.3       = stack-exec.org
