--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,6 @@ services:
       - ./dev-certs:/certs
       - ./config/nginx.conf:/etc/nginx/nginx.conf
   selenium:
-    image: selenium/standalone-firefox # :local
+    image: selenium/standalone-chrome
     ports:
       - "5900:5900"
