--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -2,6 +2,7 @@ name:              emp-pl-site
 version:           0.0.0
 cabal-version:     >= 1.8
 build-type:        Simple
+license:           AGPL
 
 Flag dev
     Description:   Turn on development settings, like auto-reload templates.
