Hack so we can stop passing --name in docker args
Passing --name meant the hostname of the emp-pl-site server was fixed.
This is convenient for selenium, but means you can't have more than one instance
of stack exec/ghci/whatever at a time.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     env_file: postgres_dev_env
     volumes:
       - ./config/inittestdb.sql:/docker-entrypoint-initdb.d/inittestdb.sql
-    ports: ["5433:5432"]
+    ports: ["5433:5432"] # For PGAdmin from the host
   nginx:
     image: nginx
     ports:
@@ -22,6 +22,9 @@ services:
       - ./dev-certs:/certs
       - ./config/nginx.conf:/etc/nginx/nginx.conf
   selenium:
-    image: selenium/standalone-chrome
+    build:
+      dockerfile: Dockerfile-selenium
+      context: .
+    expose: [31337]
     ports:
       - "5900:5900"
