--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,9 @@ install:
 - export PGPASS=$(head -c 20 /dev/urandom | sha1sum|head -c 40)
 - echo POSTGRES_PASSWORD=$PGPASS >> postgres_dev_env
 - echo PGPASS=$PGPASS >> emp-pl-site_dev_env
-- docker-compose up -d postgres selenium
-# This is a race. Bringing up postgres and selenium //should// always be slower
-# than downloading GHC and building the whole system though.
 - stack docker pull
+- stack build
+- docker-compose up -d postgres selenium
 script:
 - bash dev-certs/genkey.sh
 - stack --no-terminal --install-ghc test
