Move to LTS-7.15 and GHC 8.0.2

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,8 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration.html
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-6.9
+resolver: lts-7.15
+compiler: ghc-8.0.2
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -11,17 +12,19 @@ packages:
     commit: 9da751d2946da688151cb9861d4fca6baa95c5a6
   extra-dep: true
 - location:
-    git: https://github.com/yesodweb/yesod
-    commit: 9c38a4b08e5267e8fba41612fc08649ce491c0ef
-  subdirs:
-  - yesod-bin
+    git: https://github.com/enolan/esqueleto.git
+    commit: dcdceb8b514fbe669e72fbf91c37aa34faebfe7d
+  extra-dep: true
+- location:
+    git: https://github.com/enolan/country-codes.git
+    commit: 2cfae881a05f375b4a164d6c42e7db61934ba1f3
   extra-dep: true
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps:
-- say-0.1.0.0
-- typed-process-0.1.0.0
-- safe-exceptions-0.1.4.0
+#extra-deps:
+# - say-0.1.0.0
+# - typed-process-0.1.0.0
+# - safe-exceptions-0.1.4.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
