--- a/stack.yaml
+++ b/stack.yaml
@@ -57,7 +57,7 @@ docker:
     - "--net=bridge"
     - "--network"
     - "empplsite_default"
-  image: f394c84f221c
+  repo: enolan/emp-pl-site-build:latest
 
 image:
   containers:
