Use wai-middleware-ip-block for local dev

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -87,6 +87,7 @@ library
                  , wai
                  , wai-extra
                  , wai-logger
+                 , wai-middleware-ip-block
                  , warp
                  , yaml
                  , yesod
