Add IP_BLOCK_CFG env var to appropriate file

--- a/emp-pl-site_dev_env.sample
+++ b/emp-pl-site_dev_env.sample
@@ -2,6 +2,8 @@ PGHOST=postgres
 PGDATABASE=empplsite
 PGUSER=empplsite
 APPROOT=https://localhost:3443
+# Only works if launched from the right place
+IP_BLOCK_CFG=config/block.yml
 # add your own stuff here
 # GOOGLEUSER=
 # GOOGLEPASSWORD=
