--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,14 @@ script:
 jobs:
   include:
     - stage: Build snapshot deps
-      before_install: true
       install:
         - mkdir -p ~/.local/bin
         - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards
           --strip-components=1 -C ~/.local/bin '*/stack'
         - stack docker pull
+        # This needs to exist for Stack to launch Docker, but it won't actually
+        # read any of the variables so we just make a blank one.
+        - touch emp-pl-site_dev_env
         - stack build --only-snapshot
       script: true
     - stage: Test
