--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,11 @@ jobs:
         - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards
           --strip-components=1 -C ~/.local/bin '*/stack'
         - stack docker pull
-        - stack build --docker-run-args "" --only-snapshot
+        # Have to create some dummy stuff so Stack will launch the container
+        # successfully, even though it's not going to use any of it.
+        - touch emp-pl-site_dev_env
+        - docker network create empplsite_default
+        - stack build --only-snapshot
       script: true
     - stage: Test
 cache:
