--- a/kube/dev.yml
+++ b/kube/dev.yml
@@ -33,7 +33,7 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "gce"
-    kubernetes.io/ingress.global-static-ip-name: k8s-fw-dev-emp-pl-site--60b3bd0370a060fd
+    kubernetes.io/ingress.global-static-ip-name: http-lb-dev
 spec:
   tls:
   - hosts:
