Use dynamic provisioning for persistent disks

--- a/kube/common.yml
+++ b/kube/common.yml
@@ -11,10 +11,7 @@ spec:
   resources:
     requests:
       storage: 200G
-  selector:
-    matchLabels:
-      diskFor: postgres
-  storageClassName: ""
+  storageClassName: standard
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
