--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -19,6 +19,7 @@ library
                      Forms
                      Handler.Common
                      Handler.Home
+                     Handler.Privacy
                      Handler.Ratings
                      HostnameApi
                      Import
@@ -111,6 +112,7 @@ test-suite test
     main-is:           Spec.hs
     other-modules:     Handler.CommonSpec
                        Handler.HomeSpec
+                       Handler.PrivacySpec
                        TestImport
     hs-source-dirs:    test
     ghc-options:       -Wall -fdefer-typed-holes -rtsopts
