Close #10, track original referers

--- a/emp-pl-site.cabal
+++ b/emp-pl-site.cabal
@@ -149,6 +149,7 @@ test-suite test
                  , hspec
                  , hspec-webdriver
                  , http-client
+                 , http-types
                  , monad-logger
                  , mtl
                  , persistent
